plugins {
    id 'com.diffplug.spotless' version '6.25.0' apply false
}

ext {
    jacksonVersion = '2.18.1'
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'com.diffplug.spotless'

    // Light-touch formatting: orders imports, removes unused imports, trims trailing
    // whitespace, and enforces a final newline — no wrapping/indentation reformatting.
    // Run `./gradlew spotlessApply` to fix, `spotlessCheck` to verify (runs in `build`).
    spotless {
        java {
            // Preserve the existing grouping (static, then java, third-party, project),
            // blank-line separated — rather than collapsing everything into one block.
            importOrder('\\#', 'java', 'javax', 'org', 'com', 'nl')
            removeUnusedImports()
            trimTrailingWhitespace()
            endWithNewline()
        }
    }

    // Enforce a 100-character line limit. Spotless is intentionally light-touch and does not
    // rewrap, so this is a check-only guard (it fails the build, it does not fix). Wired into
    // `check`, so it runs as part of `build` / CI. Counts characters, not bytes.
    def maxLineLength = 100
    tasks.register('checkLineLength') {
        group = 'verification'
        description = "Fails if any Java source line exceeds ${maxLineLength} characters."
        def javaSources = sourceSets.collect { it.allJava }
        inputs.files(javaSources)
        doLast {
            def violations = []
            javaSources.each { tree ->
                tree.each { file ->
                    file.eachLine('UTF-8') { line, number ->
                        if (line.length() > maxLineLength) {
                            violations << "${file}:${number}: ${line.length()} chars"
                        }
                    }
                }
            }
            if (!violations.isEmpty()) {
                throw new GradleException("Lines exceeding ${maxLineLength} characters:\n  "
                        + violations.join('\n  '))
            }
        }
    }
    tasks.named('check').configure { dependsOn 'checkLineLength' }
    tasks.named('test').configure { dependsOn 'checkLineLength' }

    group = 'nl.alexeyu.structmatcher'
    version = '1.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
        withSourcesJar()
        withJavadocJar()
    }

    // Enforce the 'reference' doclint group (broken @see/@link targets, wrong @param
    // names) so those can't regress. The other groups (html/syntax/missing) still have
    // legacy issues, so they remain disabled for now.
    javadoc {
        options.addStringOption('Xdoclint:reference', '-quiet')
    }

    dependencies {
        // JUnit 5 platform; the existing JUnit 4 tests run via the Vintage engine.
        testImplementation 'junit:junit:4.13.2'
        testImplementation platform('org.junit:junit-bom:5.11.3')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    test {
        useJUnitPlatform()
    }

    publishing {
        publications {
            maven(MavenPublication) {
                from components.java
            }
        }
    }
}
